# vtkEdge

./: CMakeLists.txt  CTestConfig.cmake  Copyright.txt  ExportConfiguration.cmake  UseVTKEdge.cmake  VTKEdgeConfig.cmake.in  VTKEdgeConfigure.h.in
Common/: CMakeLists.txt  VTKEdgeUUIDConfigure.h.in  vtkKWECommonFactory.cxx  vtkKWECommonFactory.h  vtkKWECoreGraphicsGPUInfoList.h  vtkKWECoreGraphicsGPUInfoList.mm  vtkKWEDataArrayStreamer.cxx  vtkKWEDataArrayStreamer.h  vtkKWEDirectXGPUInfoList.cxx  vtkKWEDirectXGPUInfoList.h  vtkKWEDummyGPUInfoList.cxx  vtkKWEDummyGPUInfoList.h  vtkKWEEventForwarderCommand.cxx  vtkKWEEventForwarderCommand.h  vtkKWEFunctionToGLSL.cxx  vtkKWEFunctionToGLSL.h  vtkKWEGPUInfo.cxx  vtkKWEGPUInfo.h  vtkKWEGPUInfoList.cxx  vtkKWEGPUInfoList.h  vtkKWEGPUInfoListArray.cxx  vtkKWEGPUInfoListArray.h  vtkKWEInformationKeyMap.cxx  vtkKWEInformationKeyMap.h  vtkKWEUUID.cxx  vtkKWEUUID.h  vtkKWEXGPUInfoList.cxx  vtkKWEXGPUInfoList.h
Examples/: CMakeLists.txt
Filtering/: CMakeLists.txt  vtkKWEObjectTreeColorProperty.cxx  vtkKWEObjectTreeColorProperty.h  vtkKWEObjectTreeNodeBase.cxx  vtkKWEObjectTreeNodeBase.h  vtkKWEObjectTreeNodeIterator.cxx  vtkKWEObjectTreeNodeIterator.h  vtkKWEObjectTreePropertyBase.cxx  vtkKWEObjectTreePropertyBase.h  vtkKWEObjectTreeTransformableNode.cxx  vtkKWEObjectTreeTransformableNode.h  vtkKWEObjectTreeUserProperty.cxx  vtkKWEObjectTreeUserProperty.h
Graphics/: CMakeLists.txt  vtkKWEClipConvexPolyData.cxx  vtkKWEClipConvexPolyData.h  vtkKWEDensifyPolyData.cxx  vtkKWEDensifyPolyData.h  vtkKWETessellatedBoxSource.cxx  vtkKWETessellatedBoxSource.h
Hybrid/: CMakeLists.txt  vtkKWEExtentCalculator.cxx  vtkKWEExtentCalculator.h  vtkKWEGPUArrayCalculator.cxx  vtkKWEGPUArrayCalculator.h  vtkKWEGPUImageAlgorithmDriver.cxx  vtkKWEGPUImageAlgorithmDriver.h  vtkKWEImageDataLIC2D.cxx  vtkKWEImageDataLIC2D.h  vtkKWEImageDataLIC2DExtentTranslator.cxx  vtkKWEImageDataLIC2DExtentTranslator.h  vtkKWEImageGradientMagnitude.cxx  vtkKWEImageGradientMagnitude.h  vtkKWEImageGradientMagnitude_2D_fs.glsl  vtkKWEImageGradientMagnitude_3D_fs.glsl  vtkKWEStructuredExtent.cxx  vtkKWEStructuredExtent.h  vtkKWEStructuredGridLIC2D.cxx  vtkKWEStructuredGridLIC2D.h  vtkKWEStructuredGridLIC2D_fs.glsl
IO/: CMakeLists.txt  vtkKWECommonSerializationHelper.cxx  vtkKWECommonSerializationHelper.h  vtkKWERenderingSerializationHelper.cxx  vtkKWERenderingSerializationHelper.h  vtkKWESerializableObject.cxx  vtkKWESerializableObject.h  vtkKWESerializationHelper.cxx  vtkKWESerializationHelper.h  vtkKWESerializationHelperMap.cxx  vtkKWESerializationHelperMap.h  vtkKWESerializer.cxx  vtkKWESerializer.h  vtkKWEXMLArchiveReader.cxx  vtkKWEXMLArchiveReader.h  vtkKWEXMLArchiveWriter.cxx  vtkKWEXMLArchiveWriter.h  vtkKWEXMLElement.cxx  vtkKWEXMLElement.h  vtkKWEXMLParser.cxx  vtkKWEXMLParser.h
Imaging/: CMakeLists.txt  vtkKWEImageFDKFilter.cxx  vtkKWEImageFDKFilter.h  vtkKWEImageFFT.cu  vtkKWEImageFFT.cxx  vtkKWEImageFFT.h  vtkKWEImageRFFT.cu  vtkKWEImageRFFT.cxx  vtkKWEImageRFFT.h
ParaViewPlugins/: CMakeLists.txt  pqKWEIlluminatedLinesDisplayPanelDecorator.cxx  pqKWEIlluminatedLinesDisplayPanelDecorator.h  pqKWESurfaceLICDisplayPanelDecorator.cxx  pqKWESurfaceLICDisplayPanelDecorator.h  pqKWESurfaceLICDisplayPanelDecorator.ui  pqKWESurfaceLICDisplayPanelDecoratorImplementation.cxx  pqKWESurfaceLICDisplayPanelDecoratorImplementation.h  vtkKWEExtension.xml  vtkKWEProxyManagerExtension.cxx  vtkKWEProxyManagerExtension.h  vtkKWERendering.xml  vtkSMKWEGlyph3DMapperRepresentationProxy.cxx  vtkSMKWEGlyph3DMapperRepresentationProxy.h  vtkSMKWEIlluminatedLinesRepresentationProxy.cxx  vtkSMKWEIlluminatedLinesRepresentationProxy.h  vtkSMKWESurfaceLICRepresentationProxy.cxx  vtkSMKWESurfaceLICRepresentationProxy.h
Rendering/: CMakeLists.txt  vtkKWEColorMaterialHelper.cxx  vtkKWEColorMaterialHelper.h  vtkKWEColorMaterialHelper_vs.glsl  vtkKWEDataTransferHelper.cxx  vtkKWEDataTransferHelper.h  vtkKWEGlyph3DMapper.cxx  vtkKWEGlyph3DMapper.h  vtkKWEGlyphSelectionRenderMode.cxx  vtkKWEGlyphSelectionRenderMode.h  vtkKWEIlluminatedLinesPainter.cxx  vtkKWEIlluminatedLinesPainter.h  vtkKWEIlluminatedLinesPainter_fs.glsl  vtkKWEIlluminatedLinesPainter_vs.glsl  vtkKWELightingHelper.cxx  vtkKWELightingHelper.h  vtkKWELightingHelper_s.glsl  vtkKWELineIntergralConvolution2D.cxx  vtkKWELineIntergralConvolution2D.h  vtkKWELineIntergralConvolution2D_fs.glsl  vtkKWELineIntergralConvolution2D_fs1.glsl  vtkKWELineIntergralConvolution2D_fs2.glsl  vtkKWENoise200x200.h  vtkKWERenderingFactory.cxx  vtkKWERenderingFactory.h  vtkKWESurfaceLICDefaultPainter.cxx  vtkKWESurfaceLICDefaultPainter.h  vtkKWESurfaceLICPainter.cxx  vtkKWESurfaceLICPainter.h  vtkKWESurfaceLICPainter_fs1.glsl  vtkKWESurfaceLICPainter_fs2.glsl  vtkKWESurfaceLICPainter_vs1.glsl  vtkKWEVBOTStripsPainter.cxx  vtkKWEVBOTStripsPainter.h  vtkKWEVertexBufferObject.cxx  vtkKWEVertexBufferObject.h  vtkKWEVisibleGlyphSelector.cxx  vtkKWEVisibleGlyphSelector.h  vtkKWEWireframePainter.cxx  vtkKWEWireframePainter.h  (+2 more)
VolumeRendering/: CMakeLists.txt  vtkKWEGPUVolumeRayCastMapper.cxx  vtkKWEGPUVolumeRayCastMapper.h  vtkKWEGPUVolumeRayCastMapper_CompositeCroppingFS.glsl  vtkKWEGPUVolumeRayCastMapper_CompositeFS.glsl  vtkKWEGPUVolumeRayCastMapper_CompositeFourDependentFS.glsl  vtkKWEGPUVolumeRayCastMapper_CompositeNoCroppingFS.glsl  vtkKWEGPUVolumeRayCastMapper_CompositeShadeFS.glsl  vtkKWEGPUVolumeRayCastMapper_DDRFS.glsl  vtkKWEGPUVolumeRayCastMapper_HeaderFS.glsl  vtkKWEGPUVolumeRayCastMapper_MIPCroppingFS.glsl  vtkKWEGPUVolumeRayCastMapper_MIPFS.glsl  vtkKWEGPUVolumeRayCastMapper_MIPFourDependentCroppingFS.glsl  vtkKWEGPUVolumeRayCastMapper_MIPFourDependentFS.glsl  vtkKWEGPUVolumeRayCastMapper_MIPFourDependentNoCroppingFS.glsl  vtkKWEGPUVolumeRayCastMapper_MIPNoCroppingFS.glsl  vtkKWEGPUVolumeRayCastMapper_MinIPCroppingFS.glsl  vtkKWEGPUVolumeRayCastMapper_MinIPFS.glsl  vtkKWEGPUVolumeRayCastMapper_MinIPFourDependentCroppingFS.glsl  vtkKWEGPUVolumeRayCastMapper_MinIPFourDependentFS.glsl  vtkKWEGPUVolumeRayCastMapper_MinIPFourDependentNoCroppingFS.glsl  (+12 more)
(+224 files in other folders)
